deployment-with-storage.yml
apiVersion: v1
kind: Pod
metadata:
  name: storage-volume
spec:
  containers:
    - name: myfrontend
      image: nginx
      volumeMounts:
      - mountPath: "/var/www/html"
        name: storage-volume
  volumes:
    - name: storage-volume
      persistentVolumeClaim:
        claimName: myclaim
